# This file is auto-generated from the current state of the database. Instead
# of editing this file, please use the migrations feature of Active Record to
# incrementally modify your database, and then regenerate this schema definition.
#
# This file is the source Rails uses to define your schema when running `bin/rails
# db:schema:load`. When creating a new database, `bin/rails db:schema:load` tends to
# be faster and is potentially less error prone than running all of your
# migrations from scratch. Old migrations may fail to apply correctly if those
# migrations use external dependencies or application code.
#
# It's strongly recommended that you check this file into your version control system.

ActiveRecord::Schema[8.0].define(version: 2025_08_11_145935) do
  # These are extensions that must be enabled in order to support this database
  enable_extension "pg_catalog.plpgsql"

  create_table "actions", force: :cascade do |t|
    t.string "name"
    t.text "description"
    t.integer "cooldown"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
  end

  create_table "active_effects", force: :cascade do |t|
    t.bigint "user_id", null: false
    t.bigint "effect_id", null: false
    t.datetime "expires_at"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.index ["effect_id"], name: "index_active_effects_on_effect_id"
    t.index ["expires_at"], name: "index_active_effects_on_expires_at"
    t.index ["user_id"], name: "index_active_effects_on_user_id"
  end

  create_table "buildings", force: :cascade do |t|
    t.string "name"
    t.text "description"
    t.integer "level"
    t.string "effect"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
  end

  create_table "effects", force: :cascade do |t|
    t.string "name"
    t.text "description"
    t.string "target_attribute"
    t.string "modifier_type"
    t.float "modifier_value"
    t.integer "duration"
    t.string "effectable_type", null: false
    t.bigint "effectable_id", null: false
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.index ["effectable_type", "effectable_id"], name: "index_effects_on_effectable"
  end

  create_table "items", force: :cascade do |t|
    t.string "name"
    t.text "description"
    t.string "effect"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.float "drop_chance", default: 1.0
  end

  create_table "recipe_resources", force: :cascade do |t|
    t.bigint "recipe_id", null: false
    t.bigint "resource_id", null: false
    t.integer "quantity"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.index ["recipe_id"], name: "index_recipe_resources_on_recipe_id"
    t.index ["resource_id"], name: "index_recipe_resources_on_resource_id"
  end

  create_table "recipes", force: :cascade do |t|
    t.bigint "item_id", null: false
    t.integer "quantity"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.index ["item_id"], name: "index_recipes_on_item_id"
  end

  create_table "resources", force: :cascade do |t|
    t.string "name"
    t.text "description"
    t.integer "base_amount"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.bigint "action_id"
    t.float "drop_chance", default: 1.0
    t.index ["action_id"], name: "index_resources_on_action_id"
  end

  create_table "skills", force: :cascade do |t|
    t.string "name"
    t.text "description"
    t.integer "cost"
    t.string "effect"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.float "multiplier"
  end

  create_table "user_actions", force: :cascade do |t|
    t.bigint "user_id", null: false
    t.bigint "action_id", null: false
    t.datetime "last_performed_at"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.integer "level", default: 1
    t.index ["action_id"], name: "index_user_actions_on_action_id"
    t.index ["user_id"], name: "index_user_actions_on_user_id"
  end

  create_table "user_buildings", force: :cascade do |t|
    t.bigint "user_id", null: false
    t.bigint "building_id", null: false
    t.integer "level"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.index ["building_id"], name: "index_user_buildings_on_building_id"
    t.index ["user_id"], name: "index_user_buildings_on_user_id"
  end

  create_table "user_items", force: :cascade do |t|
    t.bigint "user_id", null: false
    t.bigint "item_id", null: false
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.integer "quantity", default: 0
    t.index ["item_id"], name: "index_user_items_on_item_id"
    t.index ["user_id"], name: "index_user_items_on_user_id"
  end

  create_table "user_resources", force: :cascade do |t|
    t.bigint "user_id", null: false
    t.bigint "resource_id", null: false
    t.integer "amount"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.index ["resource_id"], name: "index_user_resources_on_resource_id"
    t.index ["user_id"], name: "index_user_resources_on_user_id"
  end

  create_table "user_skills", force: :cascade do |t|
    t.bigint "user_id", null: false
    t.bigint "skill_id", null: false
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.index ["skill_id"], name: "index_user_skills_on_skill_id"
    t.index ["user_id"], name: "index_user_skills_on_user_id"
  end

  create_table "users", force: :cascade do |t|
    t.string "email", default: "", null: false
    t.string "encrypted_password", default: "", null: false
    t.string "reset_password_token"
    t.datetime "reset_password_sent_at"
    t.datetime "remember_created_at"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.integer "level", default: 1
    t.integer "experience", default: 0
    t.integer "skill_points", default: 0
    t.index ["email"], name: "index_users_on_email", unique: true
    t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
  end

  add_foreign_key "active_effects", "effects"
  add_foreign_key "active_effects", "users"
  add_foreign_key "recipe_resources", "recipes"
  add_foreign_key "recipe_resources", "resources"
  add_foreign_key "recipes", "items"
  add_foreign_key "resources", "actions"
  add_foreign_key "user_actions", "actions"
  add_foreign_key "user_actions", "users"
  add_foreign_key "user_buildings", "buildings"
  add_foreign_key "user_buildings", "users"
  add_foreign_key "user_items", "items"
  add_foreign_key "user_items", "users"
  add_foreign_key "user_resources", "resources"
  add_foreign_key "user_resources", "users"
  add_foreign_key "user_skills", "skills"
  add_foreign_key "user_skills", "users"
end
